# WebView

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: main.rs
src/island/: control.rs  html.rs  mod.rs  preference.rs  singleton.rs  status.rs  status_product_tests.rs  window.rs
src/island/html/: lifecycle.rs  script.rs  style.rs
