[package]
name = "a3s-webview"
version = "0.1.1"
edition = "2021"
description = "Native WebView popup helper for the a3s code TUI (RemoteUI) — renders A3S OS viewUrls in a sized window"
license = "MIT"
repository = "https://github.com/A3S-Lab/WebView"
homepage = "https://github.com/A3S-Lab/a3s"
keywords = ["a3s", "webview", "tui", "remoteui"]
categories = ["command-line-utilities", "gui"]

[[bin]]
name = "a3s-webview"
path = "src/main.rs"

[dependencies]
# macOS uses the built-in WKWebView (no system deps); Linux needs WebKitGTK,
# Windows the WebView2 runtime (ships with Win10+).
wry = "0.55"
tao = "0.35"

# macOS-only: native titlebar back/forward/reload buttons via AppKit. These are
# the exact versions tao/wry already lock, so nothing new is unified.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString"] }
objc2-app-kit = { version = "0.3", features = [
    "NSResponder",
    "NSView",
    "NSControl",
    "NSCell",
    "NSButton",
    "NSImage",
    "NSViewController",
    "NSTitlebarAccessoryViewController",
    "NSWindow",
    "NSLayoutConstraint",
] }

[profile.release]
opt-level = "z"
lto = true
strip = true
